--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,9 +21,11 @@ jobs:
       - uses: purcell/setup-emacs@master
         with:
           version: ${{ matrix.emacs_version }}
-      - uses: conao3/setup-cask@master
+      - uses: emacs-eask/setup-eask@master
+        with:
+          version: "snapshot"
       - uses: actions/checkout@v3
-      - run: cask
+      - run: eask install-deps
       - name: Run tests
         run: |
           emacs --version
