--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,7 @@ jobs:
     strategy:
       matrix:
         emacs_version:
+          - 25.3
           - 26.3
           - 27.2
           - 28.2
@@ -20,11 +21,11 @@ jobs:
       - uses: purcell/setup-emacs@master
         with:
           version: ${{ matrix.emacs_version }}
-      - uses: emacs-eask/setup-eask@master
+      - uses: cask/setup-cask@master
         with:
           version: "snapshot"
       - uses: actions/checkout@v3
-      - run: eask install-deps
+      - run: cask install
       - name: Run tests
         run: |
           emacs --version
