Switch to Eldev
...which (a) can install updated versions of built-in packages (seq in
this case) and (b) allows me to at least write some hacky
configuration to get it to load the new version of seq.

It also has a quick way to test on other Emacs versions utilizing
Docker, which is much nicer than the "push to GitHub, wait for CI,
look at the message" iteration cycle.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,9 +21,9 @@ jobs:
       - uses: purcell/setup-emacs@master
         with:
           version: ${{ matrix.emacs_version }}
-      - uses: cask/setup-cask@master
-        with:
-          version: "snapshot"
+      - name: Install eldev
+        run: |
+          curl -fsSL https://raw.github.com/doublep/eldev/master/webinstall/github-eldev | sh
       - uses: actions/checkout@v3
       - run: cask install
       - name: Run tests
