--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,6 +2,7 @@ name: test
 
 on:
   pull_request:
+  workflow_dispatch:
   push:
     branches:
       - main
@@ -17,7 +18,7 @@ jobs:
           - 26.3
           - 27.2
           - 28.2
-          - snapshot
+          - 29.2
     steps:
       - uses: purcell/setup-emacs@master
         with:
@@ -25,7 +26,7 @@ jobs:
       - name: Install eldev
         run: |
           curl -fsSL https://raw.github.com/doublep/eldev/master/webinstall/github-eldev | sh
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - run: |
           eldev prepare
       - name: Run tests
